<resources>

    <string name="app_name">Scribble</string>
    <string name="action_settings">Settings</string>
	
	<string name="paint">Paint</string>
	<string name="sml">Small</string>
	<string name="med">Medium</string>
	<string name="lrg">Large</string>
	
	<string name="newCanvas">New</string>
	<string name="undo">Undo</string>
	<string name="redo">Redo</string>
	<string name="save">Save</string>
	<string name="email">E-Mail</string>
	
	
	<string name="tools">Tool</string>
	<string name="shapes">Shape</string>
	<string name="sizes">Size</string>
	<string name="color">Color</string>
	
	
	<string name="useBrush">Brush</string>
	<string name="useEraser">Eraser</string>
	
	<string name="rectangle">Rectangle</string>
	<string name="circle">Circle</string>
	<string name="rectanglef">Filled Rectangle</string>
	<string name="circlef">Filled Circle</string>
	<string name="line">Line</string>
	
	<string name="pt1">1</string>
	<string name="pt2">2</string>
	<string name="pt3">3</string>
	<string name="pt4">4</string>
	<string name="pt5">5</string>
	<string name="pt6">6</string>
	
	<string name="colorBlack">Black</string>
	<string name="colorWhite">White</string>
	<string name="colorRed">Red</string>
	<string name="colorOrange">Orange</string>
	<string name="colorYellow">Yellow</string>
	<string name="colorGreen">Green</string>
	<string name="colorBlue">Blue</string>
	<string name="colorPurple">Purple</string>
	
	<string name="currSizeText">Brush Size</string>
	<string name="okBtn">OK</string>
	<string name="cancBtn">Cancel</string>
	
	<string name="redValue">RED</string>
	<string name="greenValue">GREEN</string>
	<string name="blueValue">BLUE</string>
	<string name="okBtn2">OK</string>
	<string name="cancBtn2">Cancel</string>
	
</resources>
