<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item  
        android:id="@+id/colorBlack"  
        android:title="@string/colorBlack"/> 
        
   	<item  
        android:id="@+id/colorWhite"
        android:title="@string/colorWhite"/>
   	
   	<item  
        android:id="@+id/colorRed"
        android:title="@string/colorRed"/>
   	
   	<item  
        android:id="@+id/colorOrange"
        android:title="@string/colorOrange"/>
   	
   	<item  
        android:id="@+id/colorYellow"  
        android:title="@string/colorYellow"/> 
        
   	<item  
        android:id="@+id/colorGreen"
        android:title="@string/colorGreen"/>
   	
   	<item  
        android:id="@+id/colorBlue"
        android:title="@string/colorBlue"/>
   	
   	<item  
        android:id="@+id/colorPurple"
        android:title="@string/colorPurple"/>

</menu>
