<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <!-- Top buttons -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:background="@android:color/black" >
    
        <Button
            android:id="@+id/newDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/newCanvas"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
	        
        <Button
            android:id="@+id/undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/undo"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
	    
        <Button
            android:id="@+id/redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/redo"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
	    
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/email"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        
	</LinearLayout>
	
    
    <!-- Center part -->
    <drawing.DrawingView
    android:id="@+id/drawing"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="3dp"
    android:layout_weight="1"
    android:background="#FFFFFFFF" />
    
    
    <!-- Bottom Menus -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:background="@android:color/black" >
    
        <Button
            android:id="@+id/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/tools"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
	        
        <Button
            android:id="@+id/shapes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/shapes"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
	    
        <Button
            android:id="@+id/sizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/sizes"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
	    
        <Button
            android:id="@+id/colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/color"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        
	</LinearLayout>
    
    
    
    
 
</LinearLayout>