<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sizeDialogSetup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/currentSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currSizeText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
	    <SeekBar
	        android:id="@+id/sizeSeeker"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical" />
	    
	 <!--    <ImageView
	        android:id="@+id/sizePreview"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="0dp"
	        android:layout_weight=".2"
	        android:contentDescription="@string/okBtn2"
	        android:src="@drawable/sizer" />  -->
	    
	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/okSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/okBtn" />

        <Button
            android:id="@+id/cancSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancBtn" />

    </LinearLayout>

</LinearLayout>
